--- a/FFeed/review.html
+++ b/FFeed/review.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-      rel="stylesheet"/>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" 
-      rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="review.css"/>
     <title>Review Page</title>
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo"><i class="fa-solid fa-burger"></i>FoodFeed</a>
+      <a href="index.html" class="logo"><i class="fas fa-burger"></i> FoodFeed</a>
+
     </header>
       
       <div class="bd">
